Fix overflow styles

--- a/react/app/components/Application.css
+++ b/react/app/components/Application.css
@@ -1,7 +1,9 @@
 .section {
 	width: 100%;
 	max-width: 960px;
-	height: 100%;
+	height: auto;
+	min-height: 100%;
 	margin: 0 auto;
-	background-color: rgb(251, 251, 251);
+	background-color: wheat;
+	position: relative;
 }
