--- a/react/app/components/Header.css
+++ b/react/app/components/Header.css
@@ -1,7 +1,11 @@
 .header {
 	box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.25);
-	background-color: white;
+	background-color: rgba(255, 255, 255, 0.8);
 	padding: 10px 0;
+	position: fixed;
+	left: 0;
+	right: 0;
+	z-index: 1000;
 }
 
 .h1 {
