--- a/react/app/components/browse/ItemList.css
+++ b/react/app/components/browse/ItemList.css
@@ -1,5 +1,14 @@
+.container {
+	text-align: center;
+	padding-top: 42px;
+	padding-bottom: 30px;
+}
+
 .ul {
 	padding: 10px 15px;
+	width: 100%;
+	box-sizing: border-box;
+	overflow: hidden;
 }
 
 .li {
@@ -9,4 +18,8 @@
 	border-radius: 2px;
 	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
 	margin: 15px;
+}
+
+.button {
+	text-transform: uppercase;
 }
